package design.observer;
public interface DisplayElement {
    public String display();
}
